1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
  labels:
    name: identity
